# mit-ros-pkg

./: README.md  all.txt  mit-ros-pkg.rosinstall  reinstalling_nvidia.txt
branches/cturtle/lis-ros-pkg/Nano17interface/: CMakeLists.txt  README.txt  manifest.xml
branches/sandbox/cardboard/: CMakeLists.txt  TODO  alignment_cost.m  draw_cost_map.m  mainpage.dox  manifest.xml
branches/sandbox/cardboard/data/: BlueMargarita.pcd  CloroxBottle.pcd  GreenBrush.pcd  LBlock.pcd  MetalMug.pcd  PurpleMargarita.pcd  RectCup.pcd  WhiteMug.pcd  jiffy.pcd  objects.txt  sardine.pcd  soda.pcd  soup.pcd  soup16.pcd
branches/sandbox/cardboard/launch/: object_detector.launch  object_detector_service.launch
branches/sandbox/cardboard/matlab/: agglomerative.m  alignment_cost.m  alignment_cost_occ.m  build_model.m  cloudData.m  downsample_point_cloud.m  find_supporting_plane_height.m  hollow_point_cloud.m  load_aligned_scans.m  merge_partial_models.m  new_occupancy_grid.m  plot_box.m  plot_camera_views.m  point_cloud_dist.m  simple_cluster.m  updateList.m
branches/sandbox/cardboard/msg/: ObjectHypothesis.msg  SceneHypothesis.msg
branches/sandbox/cardboard/scripts/: bag_to_pcds.sh
branches/sandbox/cardboard/src/: align_models_client.cpp  bag_to_pcds.cpp  compute_pcd_features.cpp  detection.cpp  fitness.cpp  fitness.h  models.cpp  object_detector.cpp  object_detector_client.cpp  object_detector_service.cpp  optimization.cpp  pcd_rgb_converter.cpp  pcd_to_ply.cpp  ply_to_pcd.cpp  plyfile.c  plytest.c  scope_client.cpp  scope_server.cpp  scope_util.cpp  test_transforms.cpp  testing.cpp  transforms.cpp  util.cpp  visualization.cpp
branches/sandbox/cardboard/srv/: AddModel.srv  AlignModels.srv  DetectModels.srv  PointCloud.srv  Scope.srv
branches/sandbox/cuda/: CMakeLists.txt  Makefile  vectorAdd.cu
branches/sandbox/darrth/darrt/: CMakeLists.txt  mainpage.dox  manifest.xml
branches/sandbox/ee_cart_imped_demos/: CMakeLists.txt  mainpage.dox  manifest.xml
branches/sandbox/ee_cart_imped_demos/doc/: iros_abstract.tex
branches/sandbox/ee_cart_imped_demos/src/: draw_square.cpp  pr2_cut_cake.cpp  pr2_stiff_point.cpp  pr2_sweep.cpp  pr2_turn_page.cpp  pr2_wipe_screen.cpp  pr2_write_mit.cpp  pr2_write_pencil.cpp  simple_test.cpp  stop_trajectory.cpp
branches/sandbox/fastwam/: CMakeLists.txt  manifest.xml
branches/sandbox/fastwam/matlab/: add_swing_to_dynamics_model.m  approximate_paddle_cost.m  approximate_paddle_cost_gradient.m  approximate_paddle_cost_hessian.m  ard_regression.m  arm_inverse_kinematics.m  arm_kinematics.m  ball_dynamics.m  clean_arm_data.m  compress_features.m  compute_inverse_dynamics_swing_error.m  compute_swing_cost.m  compute_swing_error.m  derive_cost_formula.m  derive_magnus_obs.m  derive_paddle_jacobian.m  differentiate_arm_data.m  direct_advice.m  draw_arm.m  draw_ball_trajectories.m  draw_swing_and_ball_trajectories.m  draw_table.m  exp1.m  exp2.m  filter_ball_trajectory.m  fit_arm_model.m  fit_arm_model2.m  fprintf_formula.m  gain_swing.m  get_advice.m  get_arm_model_features.m  get_arm_to_table_transform.m  get_gravity_table.m  get_gravity_torques_for_trajectory.m  get_hit_from_training_data.m  get_training_ball.m  gp_params.m  gp_reward.m  hallucination_swing.m  image_find_local_mode.m  (+33 more)
branches/sandbox/fastwam/msg/: GainTrajectory.msg  JointTrajectory.msg  MoveTo.msg  PaddleOrientationTrajectory.msg  SwingData.msg  TorqueTrajectory.msg
branches/sandbox/fastwam/src/: arm.cpp  kinematics.cpp  kinematics.h  safety_controller.cpp  swingdata_logger.cpp  swingtest.cpp  torque_test.cpp  util.cpp  util.h  wamtest.cpp  wamtest_client.cpp
branches/sandbox/furniture_ops/: CMakeLists.txt  mainpage.dox  manifest.xml
branches/sandbox/furniture_ops/launch/: assembler.launch
branches/sandbox/furniture_ops/src/: align_clouds.cpp  bag_read.cpp  circle_planner.cpp  cloud_grabber.cpp  cluster_furniture.cpp  convertpcd.cpp  filtervoxel.cpp  myassembler.py  occupancy.cpp  pcd_to_ply.cpp  pcl_helpers.cpp  pcl_helpers.h  pcl_test.cpp  pcl_test2.cpp  pcl_test3.cpp  publishpcd.cpp  publishpcd_wnormals.cpp  segment_furniture.cpp  simpleassemble.py  test_radiusSearch.cpp
branches/sandbox/furniture_ops/srv/: AlignClouds.srv  AlignClouds2.srv  CombineClouds.srv  GetFurnitureClusters.srv  GetNearestCluster.srv  PlanCirclePath.srv  PlanObservationPath.srv
branches/sandbox/lis/bookbot/: CMakeLists.txt  finder.launch  mainpage.dox  manifest.xml  popup
branches/sandbox/lis/furniture/: CMakeLists.txt  mainpage.dox  manifest.xml
branches/sandbox/meshlab/: CMakeLists.txt  mainpage.dox  manifest.xml
branches/sandbox/meshlab/sample/: hippo.stl  hippo.urdf  object3mesh.ply  object3mesh.stl  object3mesh.urdf
branches/sandbox/meshlab/src/: mesh_convert.cpp  ply2stl.cpp  ply2stl.h
branches/sandbox/minority_report/: .pydevproject  CMakeLists.txt  mainpage.dox  manifest.xml
branches/sandbox/minority_report/src/: FrameObject.cpp  FrameObject.h  MRGui.cpp  MRGui.h  MinorityReportDisplay.cpp  MinorityReportDisplay.h  RosConversion.cpp  RosConversion.h  RosGlobals.cpp  RosGlobals.h  gatmo_mouse.h  gatmounits.h  globals.h  testopengl.cpp
branches/sandbox/minority_report/testimages/: imagestoload.txt
branches/sandbox/object_survey/: CMakeLists.txt  ScanAnalysis0.saved  SurveyScan0.saved  mainpage.dox  manifest.xml  scananalysis_rule0_1.bmr  surveyscan_rule0_1.bmr
branches/sandbox/object_survey/config/: shadow_filter.yaml
branches/sandbox/object_survey/launch/: odom_survey.launch  simple_survey.launch  small_object_survey.launch  test_odom.launch
branches/sandbox/object_survey/msg/: CameraScan.msg  CameraScanAnalysis.msg  ScanAnalysis.msg  SurveyResults.msg  SurveyScan.msg
branches/sandbox/object_survey/src/: ScanAnalyzer.cpp  ScanAnalyzer.h  camera_surveyer.cpp  cloud_to_mesh.cpp  cloud_to_mesh.h  dynamic_recon.cpp  (+14 more)
branches/sandbox/pingpong/: CMakeLists.txt  TODO  ball.m  estimate_ball_orientation.txt  manifest.xml
branches/sandbox/siliconvideo/: CMakeLists.txt  TODO  fpn_offsets.txt  manifest.xml
trunk/nnn/test/: CMakeLists.txt  test_nnn.cpp  testpathconfig.h
(+1697 files in other folders)
